--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@fullcalendar/timegrid": "^6.0.3",
         "bootstrap": "^5.3.0",
         "chart.js": "^3.3.2",
+        "moment": "^2.30.1",
+        "moment-timezone": "^0.5.45",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primeng": "^17.2.0",
