--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "primeicons": "^6.0.1",
         "primeng": "^17.2.0",
         "prismjs": "^1.29.0",
-        "quill": "^1.3.7",
+        "quill": "^2.0.2",
         "rxjs": "~7.8.1",
         "tslib": "^2.5.0",
         "zone.js": "~0.14.0"
@@ -46,11 +46,11 @@
         "@angular/compiler-cli": "^17.0.5",
         "@types/jasmine": "~4.3.1",
         "jasmine-core": "~4.6.0",
-        "karma": "~6.4.2",
+        "karma": "^6.4.4",
         "karma-chrome-launcher": "~3.2.0",
         "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.1.0",
+        "karma-jasmine": "^4.0.2",
+        "karma-jasmine-html-reporter": "^1.7.0",
         "typescript": "~5.2.2"
     }
 }
