--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
         "@microsoft/signalr": "^8.0.7",
+        "@zxing/browser": "^0.1.5",
+        "@zxing/library": "^0.21.3",
+        "@zxing/ngx-scanner": "^18.0.1",
         "bootstrap": "^5.3.0",
         "chart.js": "^3.3.2",
         "moment": "^2.30.1",
