--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@zxing/ngx-scanner": "^18.0.1",
         "bootstrap": "^5.3.0",
         "chart.js": "^3.3.2",
+        "jsbarcode": "^3.11.6",
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
         "primeflex": "^3.3.1",
