--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@zxing/ngx-scanner": "^18.0.1",
         "bootstrap": "^5.3.0",
         "chart.js": "^3.3.2",
+        "html2pdf.js": "^0.10.2",
         "jsbarcode": "^3.11.6",
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
@@ -50,6 +51,7 @@
         "@angular/cli": "^17.0.5",
         "@angular/compiler-cli": "^17.0.5",
         "@types/jasmine": "~4.3.1",
+        "@types/jspdf": "^2.0.0",
         "jasmine-core": "~4.6.0",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "~3.2.0",
