--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "chart.js": "^3.3.2",
         "html2pdf.js": "^0.10.2",
         "jsbarcode": "^3.11.6",
+        "jspdf": "^2.5.2",
+        "jspdf-autotable": "^3.8.4",
         "moment": "^2.30.1",
         "moment-timezone": "^0.5.45",
         "primeflex": "^3.3.1",
